# generative-ai-workshop

./: Generating_Images_with_Stable_Diffusion.ipynb  README.md  app.py  code_chat.py  document_chat.py  general_chat.py  pyproject.toml
modules/: llm.py  vectordb.py
prompts/: code_assistant_prompt.txt  document_qa_prompt.txt  general_prompt.txt
