[tool.poetry]
name = "generative-ai-workshop"
version = "0.1.0"
description = ""
authors = ["Hemant Rakesh <basketballlife600@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
langchain = "^0.2.14"
langchain-chroma = "^0.1.4"
langchain-ollama = "^0.1.1"
pypdf = "^5.1.0"
langchain-community = "^0.2.12"
langchain-core = "^0.1.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
